--- a/basu/inst/www/index.html
+++ b/basu/inst/www/index.html
@@ -8,9 +8,9 @@
 
 
 
-<title>Basu! Sample size calculator</title>
+<title>Sample size calculator</title>
 
-<meta property="og:title" content="Basu! Sample size calculator" />
+<meta property="og:title" content="Sample size calculator" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -1149,7 +1149,7 @@ html, body {
   
 </span>
 <span class="navbar-brand">
-  Basu! Sample size calculator
+  Sample size calculator
   <span class="navbar-author">
         </span>
 </span>
@@ -2949,7 +2949,7 @@ window.FlexDashboardComponents.push({
 <input class="form-control" placeholder="First proportion (e.g., 0.8) or effect size" type="number" min="0" max="1" step="0.001" id="p1"/>
 </div><div class="form-group">
 <label>Second proportion</label>
-<input class="form-control" placeholder="Second proportion (e.g., 0.2)" type="number" min="0" max="1" step="0.001" id="p2"/>
+<input class="form-control" placeholder="Second proportion (e.g., 0.2) or empty for effect size" type="number" min="0" max="1" step="0.001" id="p2"/>
 </div><div class="form-group">
 <label>Significance level</label>
 <input class="form-control" placeholder="Alpha level as a proportion (e.g., 0.05)" type="number" min="0" max="1" step="0.001" id="siglevel"/>
@@ -2959,6 +2959,9 @@ window.FlexDashboardComponents.push({
 </div><div class="form-group" id="isize">
 <label>Sample size</label>
 <input class="form-control" type="number" min="0" step="1" id="size1"/>
+</div><div class="form-group">
+<label>Design effect</label>
+<input class="form-control" value="1" type="number" id="deff"/>
 </div><div class="form-group">
 <label>Alternative hypothesis</label>
 <select class="form-control" id="alternative">
@@ -2971,7 +2974,6 @@ window.FlexDashboardComponents.push({
 <select class="form-control" id="pfunction">
 <option value="pwr.p.test">One sample</option>
 <option value="pwr.2p.test">Two samples</option>
-<option value="pwr.2p2n.test">Two sample (different sizes)</option>
 </select>
 </div><button type="submit" class="btn btn-primary" id="ptest">Submit</button></p>
 </div>
@@ -2996,6 +2998,9 @@ window.FlexDashboardComponents.push({
 <label>Sample size</label>
 <input class="form-control" type="number" min="0" step="1" id="tsize"/>
 </div><div class="form-group">
+<label>Design effect</label>
+<input class="form-control" value="1" type="number" id="tdeff"/>
+</div><div class="form-group">
 <label>Alternative hypothesis</label>
 <select class="form-control" id="talternative">
 <option value="two.sided">Two sided</option>
@@ -3005,11 +3010,61 @@ window.FlexDashboardComponents.push({
 </div><div class="form-group">
 <label>Type of t test</label>
 <select class="form-control" id="ttype">
-<option value="one">One sample</option>
-<option value="two">Two samples</option>
+<option value="one.sample">One sample</option>
+<option value="two.sample">Two samples</option>
 <option value="paired">Paired samples</option>
 </select>
 </div><button type="submit" class="btn btn-primary" id="ttest">Submit</button></p>
+</div>
+<div id="correlations" class="section level3">
+<h3>Correlations</h3>
+<p>
+<em>Leave empty the box that you want to calculate.</em>
+</p>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><div class="form-group">
+<label>Correlation</label>
+<input class="form-control" placeholder="Correlation coefficient" type="number" step="0.001" id="rr"/>
+</div><div class="form-group">
+<label>Significance level</label>
+<input class="form-control" placeholder="Alpha level as a proportion (e.g., 0.05)" type="number" min="0" max="1" step="0.001" id="rsiglevel"/>
+</div><div class="form-group">
+<label>Power</label>
+<input class="form-control" placeholder="Power as a proportion (e.g., 0.8)" type="number" min="0" max="1" step="0.001" id="rpower"/>
+</div><div class="form-group">
+<label>Sample size</label>
+<input class="form-control" type="number" min="0" step="1" id="rsize"/>
+</div><div class="form-group">
+<label>Alternative hypothesis</label>
+<select class="form-control" id="ralternative">
+<option value="two.sided">Two sided</option>
+<option value="less">Smaller than</option>
+<option value="greater">Greater than</option>
+</select>
+</div><button type="submit" class="btn btn-primary" id="rtest">Submit</button></p>
+</div>
+<div id="effect-sizes" class="section level3">
+<h3>Effect sizes</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><div class="form-group">
+<label>Test</label>
+<select class="form-control" id="cohentest">
+<option value="p">Proportions</option>
+<option value="t">t-test</option>
+<option value="r">Correlation</option>
+</select>
+</div><div class="form-group">
+<label>Effect size</label>
+<select class="form-control" id="coheneffsize">
+<option value="small">Small</option>
+<option value="medium">Medium</option>
+<option value="large">Large</option>
+</select>
+</div><button type="submit" class="btn btn-primary" id="cohensize">Submit</button></p>
 </div>
 </div>
 <div id="column-1" class="section level2">
