--- a/basu/inst/www/index.html
+++ b/basu/inst/www/index.html
@@ -2949,7 +2949,7 @@ window.FlexDashboardComponents.push({
 <input class="form-control" placeholder="First proportion (e.g., 0.8) or effect size" id="p1"/>
 </div><div class="form-group">
 <label>Second proportion</label>
-<input class="form-control" placeholder="Second proportion (e.g., 0.2) or empty for effect size" id="p2"/>
+<input class="form-control" placeholder="Second proportion (e.g., 0.2). Leave empty to get effect size" id="p2"/>
 </div><div class="form-group">
 <label>Significance level</label>
 <input class="form-control" placeholder="Alpha level as a proportion (e.g., 0.05)" id="siglevel"/>
@@ -3075,6 +3075,12 @@ window.FlexDashboardComponents.push({
 <tbody>
 </tbody>
 </table>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<div class="alert alert-dismissible alert-danger" style="display:none">
+<button type="button" class="close" aria-hidden="true">&times;</button>
+</div>
 </div>
 </div>
 
